fixed menu problem in dark mode

--- a/public/main/css/style.scss
+++ b/public/main/css/style.scss
@@ -145,6 +145,7 @@ section {
 
   #menu-btn {
     display: none;
+    color: --
   }
 
   .search-form {
